--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vania.jogoforca.MainActivity">
 
-    <TextView
+
+    <view
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        class="com.vania.jogoforca.EstudoView"
+        android:id="@+id/view" />
 </RelativeLayout>
