--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,17 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vania.jogoforca.MainActivity">
 
 
-    <view
+    <!--<view-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--class="com.vania.jogoforca.EstudoView"-->
+        <!--android:id="@+id/view" />-->
+
+    <com.vania.jogoforca.ForcaView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        class="com.vania.jogoforca.EstudoView"
-        android:id="@+id/view" />
+        android:layout_height="300dp" />
+
 </RelativeLayout>
