--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vania.jogoforca.MainActivity">
+    tools:context="com.vania.jogoforca.MainActivity"
+    android:orientation="vertical">
 
 
     <!--<view-->
@@ -15,6 +16,30 @@
 
     <com.vania.jogoforca.ForcaView
         android:layout_width="wrap_content"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        android:id="@+id/fvJogo"
+        android:layout_gravity="center"/>
+    
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/etLetra"
+        android:layout_gravity="center_horizontal|bottom"
+        android:maxLength="1"/> <!--Quantidade de caracteres que podem ser usados -->
 
-</RelativeLayout>
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btJogar"
+        android:enabled="false"
+        android:layout_gravity="center_horizontal|bottom"
+        android:text="Jogar"/>
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btPlay"
+        android:enabled="true"
+        android:layout_gravity="center_horizontal|bottom"
+        android:text="Play"/>
+</LinearLayout>
