tirando o plano cartesiano da tela e desenhando o boneco apenas nos erros

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/etLetra"
         android:layout_gravity="center_horizontal|bottom"
+        android:enabled="false"
         android:maxLength="1"/> <!--Quantidade de caracteres que podem ser usados -->
 
     <Button
